src/proyecto1/Encuesta/Analizador/Analyzer.java
/* Generated By:JavaCC: Do not edit this line. Analyzer.java */
  package proyecto1.Encuesta.Analizador;
  import proyecto1.Encuesta.Nodo;
  import proyecto1.Encuesta.Constants;
  public class Analyzer implements AnalyzerConstants {
  public Nodo root;

  final public void INICIO() throws ParseException {
  Nodo padre, hijo;
Token t;
    padre = new Nodo(Constants.INICIO,0,0,"INICIO");
    hijo = INSTRUCCIONES();
                         padre.hijos.add(hijo);
                                                  root = padre;
    jj_consume_token(0);
  }

  final public Nodo INSTRUCCIONES() throws ParseException {
  Nodo padre,hijo,hijo2;
    padre = new Nodo("INSTRUCCIONES",0,0,"INSTRUCCIONES");
    hijo = INICIAR();
                      padre.hijos.add(hijo);
    INSTRUCCIONES2(padre);
    {if (true) return padre;}
    throw new Error("Missing return statement in function");
  }

  final public Nodo INSTRUCCIONES2(Nodo padre) throws ParseException {
  Nodo hijo,hijo2;
    if (jj_2_1(2)) {
      hijo = INICIAR();
                      padre.hijos.add(hijo);
      INSTRUCCIONES2(padre);
    {if (true) return padre;}
    } else {
     {if (true) return padre;}
    }
    throw new Error("Missing return statement in function");
  }

  final public Nodo INICIAR() throws ParseException {
  Nodo padre,hijo;
    if (jj_2_2(2)) {
      padre = INICIARAGRUPACION();
                          {if (true) return padre;}
    } else if (jj_2_3(2)) {
      padre = INICIARCICLO();
                      {if (true) return padre;}
    } else if (jj_2_4(2)) {
      padre = PREGUNTA();
                  {if (true) return padre;}
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public Nodo INICIARAGRUPACION() throws ParseException {
 Nodo padre, hijo,hijo2;
    jj_consume_token(INICIAR_AGRUPACION);
                     padre=new Nodo(Constants.INICIARAGRUPACION,0,0,"INICIAR AGRUPACION");
    jj_consume_token(LlaveL);
    hijo = MUCHOS_CONTENIDOSP();
    jj_consume_token(LlaveR);
    hijo2 = FINAGRUPACION();
                      padre.hijos.add(hijo);padre.hijos.add(hijo2); {if (true) return padre;}
    throw new Error("Missing return statement in function");
  }

  final public Nodo FINAGRUPACION() throws ParseException {
 Nodo padre, hijo,hijo2;
    if (jj_2_5(2)) {
      padre = INSTRUCCIONES();
      jj_consume_token(FINALIZAR_AGRUPACION);
      jj_consume_token(LlaveL);
      hijo2 = MUCHOS_CONTENIDOSP();
      jj_consume_token(LlaveR);
                                                                                          hijo=new Nodo("FINALIZAR AGRUPACION",0,0,"FINALIZAR AGRUPACION"); padre.hijos.add(hijo);hijo.hijos.add(hijo2);   {if (true) return padre;}
    } else if (jj_2_6(2)) {
      jj_consume_token(FINALIZAR_AGRUPACION);
      jj_consume_token(LlaveL);
      hijo = MUCHOS_CONTENIDOSP();
      jj_consume_token(LlaveR);
                                                                    padre=new Nodo("FINALIZAR AGRUPACION",0,0,"FINALIZAR AGRUPACION"); padre.hijos.add(hijo);  {if (true) return padre;}
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public Nodo INICIARCICLO() throws ParseException {
 Nodo padre, hijo,hijo2;
    jj_consume_token(INICIAR_CICLO);
                padre=new Nodo(Constants.INICIARCICLO,0,0,"INICIAR CICLO");
    jj_consume_token(LlaveL);
    hijo = MUCHOS_CONTENIDOSP();
    jj_consume_token(LlaveR);
    hijo2 = FINCICLO();
                 padre.hijos.add(hijo);padre.hijos.add(hijo2); {if (true) return padre;}
    throw new Error("Missing return statement in function");
  }

  final public Nodo FINCICLO() throws ParseException {
 Nodo padre, hijo,hijo2;
    if (jj_2_7(2)) {
      padre = INSTRUCCIONES();
      jj_consume_token(FINALIZAR_CICLO);
      jj_consume_token(LlaveL);
      hijo2 = MUCHOS_CONTENIDOSP();
      jj_consume_token(LlaveR);
                                                                                     hijo=new Nodo("FINALIZAR CICLO",0,0,"FINALIZAR CICLO"); padre.hijos.add(hijo);hijo.hijos.add(hijo2);  {if (true) return padre;}
    } else if (jj_2_8(2)) {
      jj_consume_token(FINALIZAR_CICLO);
      jj_consume_token(LlaveL);
      hijo = MUCHOS_CONTENIDOSP();
      jj_consume_token(LlaveR);
                                                               padre=new Nodo("FINALIZAR CICLO",0,0,"FINALIZAR CICLO"); padre.hijos.add(hijo);  {if (true) return padre;}
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public Nodo PREGUNTA() throws ParseException {
Nodo padre,hijo,hijo2;
Token t;
    if (jj_2_9(2)) {
      jj_consume_token(ENTERO);
          padre=new Nodo(Constants.ENTERO,0,0,"ENTERO");
      jj_consume_token(LlaveL);
      hijo = MUCHOS_CONTENIDOSP();
                                   padre.hijos.add(hijo);
      jj_consume_token(LlaveR);
                                                                     {if (true) return padre;}
    } else if (jj_2_10(2)) {
      jj_consume_token(NOTA);
             padre=new Nodo(Constants.NOTA,0,0,"NOTA");
      jj_consume_token(LlaveL);
      hijo = MUCHOS_CONTENIDOSP();
                                  padre.hijos.add(hijo);
      jj_consume_token(LlaveR);
                                                                    {if (true) return padre;}
    } else if (jj_2_11(2)) {
      jj_consume_token(FECHA);
              padre=new Nodo(Constants.FECHA,0,0,"FECHA");
      jj_consume_token(LlaveL);
      hijo = MUCHOS_CONTENIDOSP();
                                  padre.hijos.add(hijo);
      jj_consume_token(LlaveR);
                                                                    {if (true) return padre;}
    } else if (jj_2_12(2)) {
      jj_consume_token(TEXTO);
              padre=new Nodo(Constants.TEXTO,0,0,"TEXTO");
      jj_consume_token(LlaveL);
      hijo = MUCHOS_CONTENIDOSP();
                                  padre.hijos.add(hijo);
      jj_consume_token(LlaveR);
                                                                    {if (true) return padre;}
    } else if (jj_2_13(2)) {
      jj_consume_token(RANGO);
              padre=new Nodo(Constants.RANGO,0,0,"RANGO");
      jj_consume_token(LlaveL);
      hijo = MUCHOS_CONTENIDOSP();
                                  padre.hijos.add(hijo);
      jj_consume_token(LlaveR);
                                                                    {if (true) return padre;}
    } else if (jj_2_14(2)) {
      jj_consume_token(HORA);
             padre=new Nodo(Constants.HORA,0,0,"HORA");
      jj_consume_token(LlaveL);
      hijo = MUCHOS_CONTENIDOSP();
                                  padre.hijos.add(hijo);
      jj_consume_token(LlaveR);
                                                                    {if (true) return padre;}
    } else if (jj_2_15(2)) {
      jj_consume_token(FECHAHORA);
                  padre=new Nodo(Constants.FECHAHORA,0,0,"FECHAHORA");
      jj_consume_token(LlaveL);
      hijo = MUCHOS_CONTENIDOSP();
                                  padre.hijos.add(hijo);
      jj_consume_token(LlaveR);
                                                                    {if (true) return padre;}
    } else if (jj_2_16(2)) {
      jj_consume_token(DECIMAL);
                padre=new Nodo(Constants.DECIMAL,0,0,"DECIMAL");
      jj_consume_token(LlaveL);
      hijo = MUCHOS_CONTENIDOSP();
                                  padre.hijos.add(hijo);
      jj_consume_token(LlaveR);
                                                                    {if (true) return padre;}
    } else if (jj_2_17(2)) {
      jj_consume_token(CONDICIONAL);
                 padre=new Nodo(Constants.CONDICIONAL,0,0,"CONDICIONAL");
      jj_consume_token(LlaveL);
      hijo = MUCHOS_CONTENIDOSP();
                                  padre.hijos.add(hijo);
      jj_consume_token(LlaveR);
                                                                    {if (true) return padre;}
    } else if (jj_2_18(2)) {
      jj_consume_token(MULTIMEDIA);
                padre=new Nodo(Constants.MULTIMEDIA,0,0,"MULTIMEDIA");
      jj_consume_token(LlaveL);
      hijo = MUCHOS_CONTENIDOSP();
                                  padre.hijos.add(hijo);
      jj_consume_token(LlaveR);
                                                                    {if (true) return padre;}
    } else if (jj_2_19(2)) {
      jj_consume_token(SELECCIONA_UNO);
      t = jj_consume_token(ID);
                          padre=new Nodo(Constants.SELECCIONA_UNO,0,0,"SELECCIONA_UNO");
  hijo2=new Nodo("valor", t.beginLine, t.beginColumn,t.image); padre.hijos.add(hijo2);
      jj_consume_token(LlaveL);
      hijo = MUCHOS_CONTENIDOSP();
                                  padre.hijos.add(hijo);
      jj_consume_token(LlaveR);
                                                                    {if (true) return padre;}
    } else if (jj_2_20(2)) {
      jj_consume_token(SELECCIONA_MULTIPLES);
      t = jj_consume_token(ID);
                                 padre=new Nodo(Constants.SELECCIONA_MULTIPLES,0,0,"SELECCIONA_MULTIPLES");
  hijo2=new Nodo("valor", t.beginLine, t.beginColumn,t.image); padre.hijos.add(hijo2);
      jj_consume_token(LlaveL);
      hijo = MUCHOS_CONTENIDOSP();
                                  padre.hijos.add(hijo);
      jj_consume_token(LlaveR);
                                                                    {if (true) return padre;}
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public Nodo MUCHOS_CONTENIDOSP() throws ParseException {
Nodo padre,hijo,hijo2;
   padre = new Nodo("VALORES",0,0,"VALORES");
    hijo = CONTENIDO_PREGUNTA();
                                padre.hijos.add(hijo);
    MUCHOS_CONTENIDOSP2(padre);
 {if (true) return padre;}
    throw new Error("Missing return statement in function");
  }

  final public Nodo MUCHOS_CONTENIDOSP2(Nodo padre) throws ParseException {
Nodo hijo,hijo2;
    if (jj_2_21(2)) {
      hijo = CONTENIDO_PREGUNTA();
                                padre.hijos.add(hijo);
      MUCHOS_CONTENIDOSP2(padre);
 {if (true) return padre;}
    } else {
  {if (true) return padre;}
    }
    throw new Error("Missing return statement in function");
  }

  final public Nodo CONTENIDO_PREGUNTA() throws ParseException {
Nodo padre,hijo,hijo2;
Token t;
    if (jj_2_22(2)) {
      jj_consume_token(ID_PREGUNTA);
                   padre=new Nodo("ID PREGUNTA",0,0,"ID PREGUNTA");
      jj_consume_token(delim);
      t = jj_consume_token(ID);
      jj_consume_token(delim);
 hijo=new Nodo("id",0,0,t.image);padre.hijos.add(hijo); {if (true) return padre;}
    } else if (jj_2_23(2)) {
      jj_consume_token(APLICABLE);
                  padre=new Nodo("APLICABLE",0,0,"APLICABLE");
      t = jj_consume_token(ID);
 hijo=new Nodo("id",0,0,t.image);padre.hijos.add(hijo); {if (true) return padre;}
    } else if (jj_2_24(2)) {
      jj_consume_token(ETIQUETA);
                     padre=new Nodo("ETIQUETA",0,0,"ETIQUETA");
      hijo = ETQ();
           padre.hijos.add(hijo); {if (true) return padre;}
    } else if (jj_2_25(2)) {
      jj_consume_token(PARAMETRO);
              padre=new Nodo("PARAMETRO",0,0,"PARAMETRO");
      hijo = ETQ();
      padre.hijos.add(hijo); {if (true) return padre;}
    } else if (jj_2_26(2)) {
      jj_consume_token(CALCULAR);
                 padre=new Nodo("CALCULAR",0,0,"CALCULAR");
      hijo = ETQ();
      padre.hijos.add(hijo); {if (true) return padre;}
    } else if (jj_2_27(2)) {
      jj_consume_token(SUGERENCIA);
                  padre=new Nodo("SUGERENCIA",0,0,"SUGERENCIA");
      hijo = ETQ();
      padre.hijos.add(hijo); {if (true) return padre;}
    } else if (jj_2_28(2)) {
      jj_consume_token(REQUERIDO);
                  padre=new Nodo("REQUERIDO",0,0,"REQUERIDO");
      hijo = ETQ();
      padre.hijos.add(hijo); {if (true) return padre;}
    } else if (jj_2_29(2)) {
      jj_consume_token(PORDEFECTO);
                   padre=new Nodo("PORDEFECTO",0,0,"PORDEFECTO");
      hijo = ETQ();
          padre.hijos.add(hijo); {if (true) return padre;}
    } else if (jj_2_30(2)) {
      jj_consume_token(REQUERIDOMSN);
                 padre=new Nodo("REQUERIDOMSN",0,0,"REQUERIDOMSN");
      hijo = ETQ();
      padre.hijos.add(hijo); {if (true) return padre;}
    } else if (jj_2_31(2)) {
      jj_consume_token(CODIGO_POST);
                    padre=new Nodo("CODIGO_POST",0,0,"CODIGO_POST");
      hijo = ETQ();
      padre.hijos.add(hijo); {if (true) return padre;}
    } else if (jj_2_32(2)) {
      jj_consume_token(CODIGO_PRE);
                   padre=new Nodo("CODIGO_PRE",0,0,"CODIGO_PRE");
      hijo = ETQ();
      padre.hijos.add(hijo); {if (true) return padre;}
    } else if (jj_2_33(2)) {
      jj_consume_token(RESTRINGIR);
                   padre=new Nodo("RESTRINGIR",0,0,"RESTRINGIR");
      hijo = ETQ();
      padre.hijos.add(hijo); {if (true) return padre;}
    } else if (jj_2_34(2)) {
      jj_consume_token(RESTRINGIRMSN);
                      padre=new Nodo("RESTRINGIRMSN",0,0,"RESTRINGIRMSN");
      hijo = ETQ();
      padre.hijos.add(hijo); {if (true) return padre;}
    } else if (jj_2_35(2)) {
      jj_consume_token(LECTURA);
                padre=new Nodo("LECTURA",0,0,"LECTURA");
      hijo = ETQ();
      padre.hijos.add(hijo); {if (true) return padre;}
    } else if (jj_2_36(2)) {
      jj_consume_token(APARIENCIA);
                   padre=new Nodo("APARIENCIA",0,0,"APARIENCIA");
      hijo = ETQ();
      padre.hijos.add(hijo); {if (true) return padre;}
    } else if (jj_2_37(2)) {
      jj_consume_token(REPETICION);
                   padre=new Nodo("REPETICION",0,0,"REPETICION");
      hijo = ETQ();
      padre.hijos.add(hijo); {if (true) return padre;}
    } else if (jj_2_38(2)) {
      jj_consume_token(MULTIMEDIA);
                   padre=new Nodo("MULTIMEDIA",0,0,"MULTIMEDIA");
      hijo = ETQ();
      padre.hijos.add(hijo); {if (true) return padre;}
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public Nodo ETQ() throws ParseException {
 String Cad;
Nodo padre;
Nodo aux,aux2;
  padre=new Nodo("",0,0,"concatenar");
    aux2 = T();
           padre.hijos.add(aux2);
    ETQ2(padre);
                                                {if (true) return padre;}
    throw new Error("Missing return statement in function");
  }

  final public Nodo ETQ2(Nodo padre) throws ParseException {
 String Cad;
Nodo aux,aux2;
    if (jj_2_39(2)) {
      aux = T();
           padre.hijos.add(aux);
      ETQ2(padre);
                                                  {if (true) return padre;}
    } else {
  {if (true) return padre;}
    }
    throw new Error("Missing return statement in function");
  }

  final public Nodo T() throws ParseException {
 Token t;
    if (jj_2_40(2)) {
      t = jj_consume_token(Cualquiera);
                  String aux=t.image.replace("~","");aux=aux.replace("\u005c"","\u005c\u005c\u005c"");   {if (true) return new Nodo("padre ",0,0,aux + " ");}
    } else if (jj_2_41(2)) {
      jj_consume_token(Numeral);
      jj_consume_token(CorcheteL);
      t = jj_consume_token(ID);
      jj_consume_token(CorcheteR);
                                           String aux=t.image.replace("~",""); {if (true) return new Nodo("padre ",0,0,aux + " ");}
    } else if (jj_2_42(2)) {
      jj_consume_token(Punto);
           {if (true) return new Nodo("padre ",0,0,"padre");}
    } else if (jj_2_43(2)) {
      jj_consume_token(PuntoP);
            {if (true) return new Nodo("madre ",0,0,"madre");}
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  private boolean jj_2_1(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  private boolean jj_2_2(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_2(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  private boolean jj_2_3(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_3(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(2, xla); }
  }

  private boolean jj_2_4(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_4(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(3, xla); }
  }

  private boolean jj_2_5(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_5(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(4, xla); }
  }

  private boolean jj_2_6(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_6(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(5, xla); }
  }

  private boolean jj_2_7(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_7(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(6, xla); }
  }

  private boolean jj_2_8(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_8(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(7, xla); }
  }

  private boolean jj_2_9(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_9(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(8, xla); }
  }

  private boolean jj_2_10(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_10(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(9, xla); }
  }

  private boolean jj_2_11(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_11(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(10, xla); }
  }
